--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
                                 </svg>
                             </button>
 
+
+
                             <div class="input-group" style="display: flex; position: relative; width: 60%;">
                                 <textarea id="function-prompt" class="custom-scrollbar function-prompt-textarea" rows="1" oninput="autoGrow(event);" placeholder="Set Task..." required></textarea>
 
@@ -208,35 +210,45 @@
                     <div class="submenu">
                         <form id="prompt-form" onsubmit="sendMessage(event);">
                             <div>
-                                <div style="display: flex; align-items: center;">
+                                <!-- First Row: Search Bar -->
+                                <div style="display: flex; align-items: center; margin-bottom: 10px;">
+                                    <!-- Added margin for spacing -->
                                     <input id="Searchbar" class="Searchbar" placeholder="search notes..." onkeydown="if(event.key === 'Enter') event.preventDefault();" />
-                                    <div class="status-icons-container">
-                                        <div class="loader" id="aiLoadingIcon" style="display:none;"></div>
-                                        <div class="loader-fillBackground" id="aiFilledLoadingIcon" style="display:none;">
-                                            <div class="loader-fill initial-animation"></div>
-                                        </div>
-                                        <div class="error-icon-css" id="aiErrorIcon" style="display:none;">
-                                            <div class="error-x-mark">
-                                                <span class="error-x-mark-left"></span>
-                                                <span class="error-x-mark-right"></span>
+                                </div>
+
+                                <!-- Second Row: Prompt Form -->
+                                <div style="display: flex;">
+                                    <!-- Input Group with flex layout and relative positioning -->
+                                    <div class="input-group" style="display: flex; position: relative; width: 208px;">
+                                        <!-- Textarea for main prompt -->
+                                        <textarea id="prompt" class="custom-scrollbar" rows="1" oninput="autoGrow(event);" placeholder="Enter prompt..." required></textarea>
+
+                                        <!-- Status icons positioned similarly to function prompt -->
+                                        <div class="status-icons-container" style="position: absolute; right: 42px; top: 50%; transform: translateY(-50%);">
+                                            <!-- Status icons (Loader and Error) -->
+                                            <div class="loader" id="aiLoadingIcon" style="display:none;"></div>
+                                            <div class="error-icon-css" id="aiErrorIcon" style="display:none;">
+                                                <div class="error-x-mark">
+                                                    <span class="error-x-mark-left"></span>
+                                                    <span class="error-x-mark-right"></span>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="btn-group" style="margin-left: 10px;">
-                                        <button type="submit">
-                                            <svg width="18" height="18">
-                                                <use xlink:href="#play-icon"></use>
-                                            </svg>
-                                        </button>
-                                        <button id="regen-button" type="button">
-                                            <svg width="18" height="18">
-                                                <use xlink:href="#refresh-icon"></use>
-                                            </svg>
-                                        </button>
-                                    </div>
-                                </div>
-                                <div class="input-group" style="margin-top: 10px;">
-                                    <textarea id="prompt" class="custom-scrollbar" rows="1" onkeydown="handleKeyDown(event);" oninput="autoGrow(event);" placeholder="Enter prompt..." required></textarea>
+
+                                    <!-- Run button (Play icon) -->
+                                    <button type="submit">
+                                        <svg width="18" height="18">
+                                            <use xlink:href="#play-icon"></use>
+                                        </svg>
+                                    </button>
+
+                                    <!-- Regenerate button (Refresh icon) -->
+                                    <button id="regen-button" type="button">
+                                        <svg width="18" height="18">
+                                            <use xlink:href="#refresh-icon"></use>
+                                        </svg>
+                                    </button>
                                 </div>
                             </div>
                         </form>
@@ -293,13 +305,13 @@
                                 <div id="quality_value">Quality</div>
                                 <div id="fps">fps:?? (is javascript enabled?)</div>
                             </div>
-                            <input id="quality" type="range" min="0" max="100" value="2">
+                            <input id="quality" type="range" min="0" max="100" value="16">
                         </div>
                         <div class="gridLayout">
 
                             <div class="settingsSlider">
                                 <label for="length">Length: <span id="length_value"></span></label>
-                                <input id="length" type="range" min="0" max="100" value="65">
+                                <input id="length" type="range" min="0" max="100" value="50">
                             </div>
 
                             <div class="settingsSlider">
@@ -312,14 +324,24 @@
                                 <input type="range"
                                        id="maxLinesSlider"
                                        min="0"
-                                       max="1024"
+                                       max="2048"
                                        step="1"
-                                       title="Requires zooming until refresh to decrease max lines">
+                                       title="Set the removal limit for number of lines displayed">
                             </div>
 
                             <div class="settingsSlider">
                                 <label for="regenDebtSlider">Speed: <span id="regenDebtValue"></span></label>
                                 <input type="range" id="regenDebtSlider" min="0" max="4" step="0.001">
+                            </div>
+
+                            <div class="settingsSlider" title="Set the strength of line generation around your mouse.">
+                                <label for="flashlightStrength">Strength: <span id="flashlightStrength_value"></span></label>
+                                <input id="flashlightStrength" type="range" min="0" max="1" step="0.001">
+                            </div>
+
+                            <div class="settingsSlider" title="Set the radius of line generation around your mouse">
+                                <label for="flashlightRadius">Radius: <span id="flashlightRadius_value"></span></label>
+                                <input type="range" id="flashlightRadius" min="0" max="1" step="0.001">
                             </div>
 
                         </div>
@@ -336,6 +358,10 @@
                                 <div class="color-picker-item">
                                     <label for="bColor">B</label>
                                     <input type="color" id="bColor" name="bColor" value="#0000FF">
+                                </div>
+                                <div class="color-picker-item">
+                                    <label for="colorPicker">BG</label>
+                                    <input type="color" id="colorPicker" name="colorPicker" value="#000000" style="background:#222226;">
                                 </div>
                             </div>
                             <br />
@@ -365,21 +391,6 @@
 
                                 </div>
                             </div>
-                        </div>
-                        <div id="bgpick">
-                            <input type="color" id="colorPicker" name="colorPicker" value="#000000" style="background:#222226; margin-top:5px">
-                            <label for="colorPicker"> Background Color</label>
-                        </div>
-                        <br />
-                        <button id="screenshotButton" class="key-button">Screenshot</button>
-                        <button id="recordButton" class="key-button">Record</button>
-                        <br />
-                        <div id="coordinates" style="background-color: none;background-color: none; color:none; position: inherit; display: initial; left: 0px; top: 0px;">
-                            pan:
-                            <input id="pan" type="text" value="0+0i" style="background:none; border:none;" size="28" />
-                            <br />
-                            zoom:
-                            <input id="zoom" type="text" value="1" style="background:none; border:none;" size="25" />
                         </div>
                     </div>
                 </div>
@@ -564,11 +575,11 @@
                             <label for="model-select" style="margin-right: 10px;">Select Model:</label>
                             <div class="dropdown-container">
                                 <select id="model-select" class="model-selector custom-select" onchange="checkOtherModel(this)">
-                                    <option value="gpt-4">gpt-4</option>
                                     <option value="gpt-3.5-turbo-1106">gpt-3.5-1106</option>
                                     <option value="gpt-4-1106-preview">gpt-4-1106</option>
                                     <option value="gpt-4-0613">gpt-4-0613</option>
                                     <option value="gpt-4-vision-preview">gpt-4-vision</option>
+                                    <option value="gpt-4">gpt-4</option>
                                     <option value="gpt-3.5-turbo-16k-0613">gpt-3.5-16k-0613</option>
                                     <option value="gpt-3.5-turbo">gpt-3.5-turbo</option>
                                     <option value="gpt-3.5-turbo-16k">gpt-3.5-16k</option>
@@ -652,8 +663,19 @@
                             <a id="clear-unsure-button">no</a>
                             <a id="clear-sure-button">yes</a>
                         </div>
-                        <br />
                         <div style="text-align: center;">
+                            <button id="screenshotButton" class="key-button">Screenshot</button>
+                            <button id="recordButton" class="key-button">Record</button>
+                            <br />
+                            <div id="coordinates" style="background-color: none;background-color: none; color:none; position: inherit; display: initial; left: 0px; top: 0px;">
+                                pan
+                                <input id="pan" type="text" value="0+0i" style="background:none; border:none;" size="28" />
+                                <br />
+                                zoom
+                                <input id="zoom" type="text" value="1" style="background:none; border:none;" size="25" />
+                            </div>
+                            <br />
+                            <br />
                             <button id="clearLocalStorage" class="key-button">Clear Local Storage</button>
                         </div>
                     </div>
@@ -813,9 +835,6 @@
     <script src="js/zettelkasten/zetcodemirror.js"></script>
     <script src="js/zettelkasten/zettelkasten_v2.js"></script>
 
-    <script src="js/functioncall/neuraltelemetryprompt.js"></script>
-    <script src="js/functioncall/functioncallingpanel.js"></script>
-    <script src="js/functioncall/requestfunctioncall.js"></script>
 
 
 
@@ -868,6 +887,9 @@
 
     <script src="js/record/record_v1.js"></script>
     <script src="js/neuralapi.js"></script>
+    <script src="js/functioncall/functioncallingpanel.js"></script>
+    <script src="js/functioncall/neuraltelemetryprompt.js"></script>
+    <script src="js/functioncall/requestfunctioncall.js"></script>
 
 </body>
 
